--- a/components/slider/slider.wxml
+++ b/components/slider/slider.wxml
@@ -7,9 +7,9 @@
           indicator-color="{{indicatorColor}}" 
           indicator-active-color="{{indicatorActiveColor}}" 
           circular="{{circular}}">
-    <block wx:for="{{imgUrls}}">
+    <block wx:for="{{imgUrls}}" wx:key="index">
       <swiper-item>
-        <image src="{{item}}" class="slide-image" style="width: 100%; height: 100%;" />
+        <image src="{{item}}" class="slide-image" style="width: 100%; height: 375rpx; " />
       </swiper-item>
     </block>
   </swiper>
